src/objects/SomTv_B2BAktionsKontingente__c.object
<CustomObject>
    <fields>
        <fullName>SomTv_Abteilung__c</fullName>
        <description>Auswahl der Abteilung, zu der ein Kontingent zugeordnet werden soll. In Ausnahmefällen kann ein Kontingent auch nur einem Verantwortlichen zugeordnet werden.</description>
        <inlineHelpText>Auswahl der Abteilung, zu der ein Kontingent zugeordnet werden soll. In Ausnahmefällen kann ein Kontingent auch nur einem Verantwortlichen zugeordnet werden.</inlineHelpText>
        <label>Abteilung</label>
        <picklist>
            <picklistValues>
                <fullName>Geschäftsführung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales DUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales FFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales HH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales MUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Strategy &amp; Steering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing &amp; Media Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne AdFactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne Schweiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suger Ray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne Ventures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonstige</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_AnzahlKontakteJeBenutzer__c</fullName>
        <description>Wie viele Personen darf die Abteilung oder der Verantwortliche zu dieser B2B Aktion einladen?</description>
        <inlineHelpText>Wie viele Personen darf die Abteilung oder der Verantwortliche zu dieser B2B Aktion einladen?</inlineHelpText>
        <label>Anzahl Kontakte je Verantwortl/ Abtlg</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Benutzer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auswahl des Verantwortlichen des zugeordneten Kontingents. Muss ausgewählt werden.</description>
        <inlineHelpText>Auswahl des Verantwortlichen des zugeordneten Kontingents. Muss ausgewählt werden.</inlineHelpText>
        <label>Verantwortlicher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Kampagnen_Kontingente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Kampagne__c</fullName>
        <description>Auswahl einer B2B Aktion für die ein Kontingent angelegt werden soll</description>
        <inlineHelpText>Auswahl einer B2B Aktion für die ein Kontingent angelegt werden soll</inlineHelpText>
        <label>B2B Aktion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Kampagnen_Kontingente</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomTv_Kontingent_Kategorie__c</fullName>
        <description>Auswahl der Kontingent Kategorie.</description>
        <inlineHelpText>Auswahl der Kontingent Kategorie.</inlineHelpText>
        <label>Kontingent Kategorie</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>normale Karten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karten PK 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karten PK 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karten PK 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karten PK 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stehplatz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gästeliste</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Vertreter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auswahl einer Vertretung für den Kontingent-Verantwortlichen.</description>
        <inlineHelpText>Auswahl einer Vertretung für den Kontingent-Verantwortlichen.</inlineHelpText>
        <label>Vertreter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Kampagnen_Kontingente1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>B2B Aktions-Kontingent</label>
    <nameField>
        <displayFormat>KK-{000}</displayFormat>
        <label>Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Aktions-Kontingente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>